[package]
name = "wallet"
version = "0.1.0"
authors = ["calidion <calidion@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "base58 for cryptonote"

[dependencies]
cryptonote-account = "0.1.3"
cryptonote-currency = "0.1.0"
cryptonote-varint = "0.1.0"
cryptonote-raw-crypto = "0.1.0"
chrono = "0.4.6"
ed25519-dalek = "1.0.0-pre.1"

[badges]
travis-ci = { repository = "cryptonote-rust/wallet", branch = "master" }
codecov = { repository = "cryptonote-rust/wallet", branch = "master", service = "github" }
